# obmc-yadro-backup

./: README.md  meson.build
.github/workflows/: ci.yml
src/: account_entry.hpp  account_list.hpp  accounts.cpp  accounts.hpp  backup.cpp  backup.hpp  configuration.hpp  main.cpp  manifest.cpp  manifest.hpp
test/: account_entry_test.cpp  account_list_test.cpp  accounts_test.cpp  backup_test.cpp  manifest_test.cpp  meson.build
test/data/accounts/backup_badgid/etc/: passwd
test/data/accounts/backup_baduid/etc/: group  passwd  shadow
test/data/accounts/backup_exceeded/etc/: group  passwd  shadow
test/data/accounts/backup_good/etc/: group  passwd  shadow
test/data/accounts/ro/etc/: group  passwd  shadow
test/data/accounts/rw/etc/: group  shadow
test/data/full/: ro
test/data/full/rw/etc/: group  os-release  passwd  shadow
test/data/full/rw/etc/dropbear/: dropbear_rsa_host_key
test/data/full/rw/etc/systemd/network/: 00-bmc-eth0.network
test/data/full/rw/var/lib/: first-boot-set-hostname
test/data/manifest/: bmc.manifest
test/data/manifest/etc/: os-release
